--- a/main.ipynb
+++ b/main.ipynb
@@ -6,14 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from keras.models import  Sequential \n",
-    "from keras.layers import Dense, LSTM, Dropout\n",
-    "import datetime as dt\n",
+    "from keras.layers import Dense, LSTM\n",
     "plt.style.use('fivethirtyeight')"
    ]
   },
